2008-07-20  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080720-1
	* Upstream update

2008-06-13  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080607-1
	* Upstream update

2008-05-09  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080429-1
	* Upstream update

2008-03-31  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080330-1
	* Upstream update

2008-03-01  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080203-1
	* Upstream update
	* Fixed license: custom -> BSD
	* Disabled SMP build
	* Added freetype2 makedepends
	* FSH man pages