@@ -1,3 +1,8 @@
+2008-08-28  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20080828-1
+	* Upstream update
+
 2008-07-20  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20080720-1
